Revert "Merge remote-tracking branch 'origin/master' into patch"
This reverts commit fb3140970877455c50441071f316f8a0f452587b, reversing
changes made to c43fcc743f2c7dffcbf82fee3033e84d7f1f4fd1.

--- a/dev/Caddyfile
+++ b/dev/Caddyfile
@@ -10,8 +10,12 @@ root * /usr/share/caddy
 handle /api/* {
     reverse_proxy backend:3000
 }
+
 handle /.well-known/* {
-    reverse_proxy backend:3000
+    respond 404
+}
+handle /.well-known/change-password {
+    redir * /settings/session
 }
 
 handle {
